--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "chromedriver": "^73.0.0",
-    "geckodriver": "^1.16.2"
+    "geckodriver": "^1.16.2",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4"
   }
 }
