--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "chromedriver": "^73.0.0",
     "geckodriver": "^1.16.2",
+    "nightwatch-slack-reporter": "0.0.2",
     "request": "^2.88.0",
     "request-promise": "^4.2.4"
   },
   "dependencies": {
-    "nightwatch": "^1.0.19"
+    "chromedriver": "^74.0.0",
+    "nightwatch": "^1.0.19",
+    "nightwatch-html-reporter": "^2.0.6"
   }
 }
