--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "clpsec-testing-tool",
   "version": "1.0.0",
-  "description": "",
+  "description": "CLPSEC testing tool",
   "main": "index.js",
   "scripts": {
     "test": "nightwatch",
